Resolve more FindBugs warnings. These changes are all no-ops.